main.css
* {
    box-sizing: border-box;
  }

html {
  scroll-behavior: smooth;
}

body {
  font-family: 'Open Sans', sans-serif;
  font-size: 1rem;
  color:rgb(12, 26, 38);
  text-align: center;
  line-height: 1.5;
  padding-top:70px;
  scroll-behavior: smooth;
}

header {
  background-color: rgb(255, 255, 255);
  z-index: 10;
  padding: 0;
  background-image: url(images/devices.svg);
  background-repeat: no-repeat;
  background-size: 89%;
  background-position: 50% bottom;
  padding-bottom: 43%;
}

header h1 {
  display: none;
}

main {
  margin-top: -1px;
}

h1 {
  display: block;
  font-size: 30px;
  color: rgb(255, 255, 255);
  font-weight: bold;
  margin: 0px;
  font-family: 'Montserrat', sans-serif;
  flex-grow: 1;
  text-align: left;
  line-height: 30px;
  letter-spacing: -1px;
  position: absolute;
  top: 12px;
  left: 7px;
  z-index: 101;
}

h2 {
  color: rgba(10,10,10,0.9);
  font-weight: normal;
  font-size: 20px;
  margin: 0;
}

h3 {
  margin: 20px 0;
  color: rgb(255, 255, 255);
  font-size: 30px;
  text-align: left;
  font-family: 'Montserrat', sans-serif;
  letter-spacing: -1px;
}

h4 {
  font-size: 20px;
  color: rgb(41,51,71);
  margin: 10px 0px;
}

h1 a {
  text-decoration: none;
  color: rgb(255, 255, 255);
}

h2 span {
  white-space: nowrap;
}

p {
  text-align: left;
  padding: 0;
  margin: 0;
  font-size: 18px;
}


/* Start header styles */

#header-nav {
  background-color: #0077B5;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  padding: 10px 20px;
  display: flex;
  justify-content: flex-end;
  align-items: center;
  flex-flow: row wrap;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  z-index: 100;
  -webkit-box-shadow: 0px 0px 7px 0px rgba(0,0,0,0.25);
  -moz-box-shadow: 0px 0px 7px 0px rgba(0,0,0,0.25);
  box-shadow: 0px 0px 7px 0px rgba(0,0,0,0.25);
}

header h2 {
  color: rgba(10,10,10,0.9);
  font-weight: normal;
  font-size: 18px;
}

header h3 {
  background-color: rgb(255, 255, 255);
  color: rgb(0, 0, 0);
}

header img {
  width: 140px;
  margin: 20px;
}

nav,
footer {
  padding: 0;
  background-color: #aaa;
}

nav {
  position: relative;
  clear: both;
  font-size: 20px;
  background-color: #0077B5;
  z-index:100;
  display: none;
  width: 100%;
  padding-top: 10px;
}
  
nav ul {
  list-style-type: none;
  display: flex;
  flex-direction: column;
  margin: 0;
  padding: 0;
}

nav li {
  flex: 1;
  border-top: 1px solid rgba(255, 255, 255, 0.2);
}

nav li:first-child {
  border-top: none;
}

nav a {
  color: rgb(255, 255, 255);
  text-decoration: none;
  display: inline-block;
  width: 100%;
  padding: 10px 0;
}

nav a:hover {
  opacity: 30%;
  background-color: rgb(45, 139, 202);
}


/* Mobile Icon*/
.burg {
  width: 34px;
  background: none;
  border: none;
  height: fit-content;
  cursor: pointer;
}

.burg:active, .burg:focus {
  border: none;
  outline: none;
}

.burg1,
.burg3,
.burg2 {
  background-color: #fff;
  border-radius: 4px;
  content: '';
  display: block;
  height: 5px;
  margin: 5px 0;
  transition: all 0.3s ease-in-out;
}

.burg-close .burg1 {
  transform: translateY(10px) rotate(135deg);
}

.burg-close .burg2 {
  transform: scale(0);
}

.burg-close .burg3 {
  transform: translateY(-10px) rotate(-135deg);
}

/* End header styles */


section {
  padding: 40px 20px;
  scroll-behavior: smooth;
}

section img {
  width: 100%;
  box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.3);
  border-radius: 5px;
}

.about {
  background-color: #0077B5;
  color: rgb(255, 255, 255);
}

.projects { 
  background-color: rgb(245, 245, 245);
}

.projects section {
  padding: 0px;
}

.projects h3 {
  color: rgb(41, 51, 71);
}

.projects p {
  font-size: 15px;
  margin-bottom: 16px;
}

.tech-stack {
  list-style-type: none;
  margin: 10px 0 0px 0;
  padding: 0;
  font-size: 14px;
  display: flex;
  flex-flow: wrap;
  justify-content: space-between;
}

.tech-stack li {
  background-color: rgb(204, 204, 204);
  padding: 6px 9px;
  border-radius: 8px;
  margin: 0 2px 10px 2px;
}

.btns {
  display: flex;
  justify-content: space-between;
}

.projects form {
  width: 47%;
}

button {
  width: 100%;
  font-size: 16px;
  height: 46px;
  margin: 10px 0px;
  background-color: rgb(0, 119, 181);
  border: none;
  border-radius: 10px 8px 8px 10px;
  color: rgb(255, 255, 255);
  cursor: pointer;
  transition: all 0.3s;
  position: relative;
  padding-left: 50px;

}

button:hover {
  background-color: rgb(45, 139, 202);
  text-decoration: underline;
  box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5);
}

button::before {
  position: absolute;
  height: 100%;
  left: 0;
  top: 0;
  font-size: 130%;
  width: 40px;
  background: rgb(255, 255, 255);
  color: rgb(0, 119, 181);  
  z-index: 2;
  border-radius: 8px 0 0 8px;
  display: flex;
  justify-content: center;
  align-items: center;
  font-weight: 900;
}

button::after {
  content: '';
  position: absolute;
  z-index: -1;
  -webkit-transition: all 0.2s;
  -moz-transition: all 0.2s;
  transition: all 0.2s;
  width: 20px;
  height: 20px;
  background: rgb(255, 255, 255);
  z-index: 1;
  left: 35px;
  top: 50%;
  margin: -10px 0 0 -10px;
  -webkit-transform: rotate(45deg);
  -moz-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

button:hover:after {
  left: 39px;
}

.projects button span {
  font-family: 'Open Sans', sans-serif;
  font-weight: normal;
}

.skills h3 {
  color: rgb(41, 51, 71);
}

.flex-container-skills {
  display: flex;
  flex-flow: row wrap;
  justify-content: space-evenly;
  padding: 20px 0;
}

.skills-item {
  width: 140px;
  margin: 12px 0;
}

.skills-item img {
  height: 80px;
  width: 80px;
  box-shadow: none;
}

figcaption {
  line-height: 1;
  margin: 6px 0px 14px 0;
}

.contact {
  background-color: rgb(0, 119, 181);
  color: #fff;
  padding-bottom: 70px;
}

.contact-icons {
  display: flex;
  justify-content: space-evenly;
  padding: 20px 0px;
  align-items: center;
}

.contact-icons  a {
  font-size: 60px;
  text-decoration: none;
  color: #fff;
}

.contact-icons a:hover {
  color: #eeeeee;
}

.contact-icons img {
  width: 80px;
  height: 80px;
}

.contact-message {
  text-align: center;
  font-size: 20px;
  margin: 0;
  padding: 0;
}

footer {
  padding: 20px 0;
  background-color: rgb(255, 255, 255);
}

/* Small devices (landscape phones, 576px and up) */
@media (min-width: 576px) { 
  body {
    padding-top: 0;
  }

  header {
    text-align: left;
    background: none;
    padding-bottom: 0px;
    overflow: auto;
  }

  #header-nav {
    padding: 0;
    position: sticky;
  }

  #header-nav h1 {
    display:none;
  }

  header img {
    float: left;
  }

  header h1 {
    display: inline-block;
    position: absolute;
    color: rgb(0, 0, 0);
    font-size: 42px;
    line-height: 40px;
    top: 30px;
    left: 160px;
  }

  header h2 {
    color: rgba(10,10,10,0.9);
    font-weight: normal;
    font-size: 17px;
    position: absolute;
    line-height: 22px;
    top: 77px;
    left: 163px;
  }

  header img {
    width: 120px;
    height: 120px;
  }

  .burg {
    display: none;
  }

  nav {
    display: block !important; /* fringe case where the nav is hidden via jQuery on mobile menu, then browser is resized. */
    text-align: center;
    padding-top: 0px;
  }

  nav ul {
    flex-direction: row;
  }

  nav li {
    border: none;
  }

  main {
    padding-top: 300px;
    background-repeat: no-repeat;
    background-image: url(images/devices.svg);
    background-size: 550px;
    background-position: 50% 83px;
  }

  section {
    padding-left: 6%;
    padding-right: 6%;
  }
}

/* Medium devices (tablets, 768px and up) */
@media (min-width: 768px) { 

 }

